修改dom.js的路径

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li class="error">3</li>
         <li class="error">4</li>
     </ul>
-    <script src='dom.js'></script>
+    <script src='./dom.js'></script>
     <script>
         console.assert(typeof $ === 'function')
         let items = $('li')
